[gd_scene load_steps=5 format=3 uid="uid://dew6u6on3ngyy"]

[ext_resource type="Texture2D" uid="uid://1try4fu2oxy5" path="res://assets/sprites/coin.png" id="1_7s4qf"]
[ext_resource type="Script" uid="uid://bbxqucqarthjj" path="res://scripts/ball.gd" id="1_cxlvu"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7s4qf"]
radius = 4.28571

[sub_resource type="Curve" id="Curve_cxlvu"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[node name="ball" type="CharacterBody2D"]
scale = Vector2(0.7, 0.7)
script = ExtResource("1_cxlvu")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_7s4qf")
region_enabled = true
region_rect = Rect2(3, 3, 10, 10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_7s4qf")
metadata/gameOn = false

[node name="RayCastTop" type="RayCast2D" parent="."]
target_position = Vector2(0, -5.71429)

[node name="RayCastRight" type="RayCast2D" parent="."]
target_position = Vector2(5.71429, 0)

[node name="RayCastDown" type="RayCast2D" parent="."]
target_position = Vector2(0, 5.71429)

[node name="RayCastLeft" type="RayCast2D" parent="."]
target_position = Vector2(-5.71429, 0)

[node name="CPUParticles" type="CPUParticles2D" parent="."]
emitting = false
one_shot = true
explosiveness = 1.0
lifetime_randomness = 0.8
direction = Vector2(0, 0)
spread = 90.0
gravity = Vector2(0, 0)
initial_velocity_min = 20.0
initial_velocity_max = 40.0
scale_amount_min = 0.5
scale_amount_curve = SubResource("Curve_cxlvu")
color = Color(1, 0.694118, 0, 1)
